fixed visiblity of login page

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -224,7 +224,18 @@ label {
 .input {
   width: 100%;
   height: 40px;
-  background: #252525;
+  background: #dadada;
+  padding: 10px;
+  border: none;
+  margin-top: 5%;
+  outline: none;
+  border-radius: 4px;
+  font-size: 1.5rem;
+}
+.input.dark-mode{
+  width: 100%;
+  height: 40px;
+  background: #121212;
   padding: 10px;
   border: none;
   margin-top: 5%;
@@ -625,6 +636,9 @@ body.dark-mode {
 }
 #register.dark-mode:hover{
   color: var(--old-rose);
+}
+.dark-mode .input{
+  background: #292626;
 }
 
 .register label.dark-mode{
